[project]
name = "hrm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argdantic>=1.3.3",
    "coolname>=2.2.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.34.3",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "kernels>=0.8.1",
    "ninja>=1.11.1.4",
    "omegaconf>=2.3.0",
    "packaging>=25.0",
    "pydantic>=2.11.7",
    "setuptools>=80.9.0",
    "setuptools-scm>=8.3.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
    "wheel>=0.45.1",
]
